--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,13 +24,17 @@
     "from langchain.prompts.chat import ChatPromptTemplate, SystemMessagePromptTemplate, HumanMessagePromptTemplate\n",
     "from langchain_core.prompts import PromptTemplate\n",
     "from langchain.llms import OpenAI\n",
+    "from langchain_mistralai import ChatMistralAI\n",
+    "from httpx import HTTPStatusError\n",
     "\n",
     "# Load environment variables\n",
     "load_dotenv(override=True)\n",
     "\n",
     "# Environment variables for API keys and model configuration\n",
     "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")\n",
-    "OPENAI_MODEL = os.getenv(\"OPENAI_MODEL\", \"gpt-3.5-turbo\")"
+    "OPENAI_MODEL = os.getenv(\"OPENAI_MODEL\", \"gpt-3.5-turbo\")\n",
+    "MISTRAL_API_KEY = os.getenv(\"MISTRAL_API_KEY\")\n",
+    "ANTHROPIC_API_KEY = os.getenv(\"ANTHROPIC_API_KEY\")"
    ]
   },
   {
@@ -122,10 +126,10 @@
     "            self.logger.error(f\"Failed to initialize OpenAI: {str(e)}\")\n",
     "            raise HTTPException(status_code=500, detail=\"Failed to initialize OpenAI\")\n",
     "\n",
-    "    def create_joke(self, word: str) -> str:\n",
+    "    def create_joke(self, word: str, vectordb) -> str:\n",
     "        try:\n",
     "            # Update user message template with the word\n",
-    "            user_message_template = self.user_message_template.format(word=word)\n",
+    "            user_message_template = self.user_message_template.format(word=word, context=vectordb)\n",
     "            prompt = self._generate_prompt(user_message_template)\n",
     "            self.logger.info(f\"Generated prompt: {prompt}\")\n",
     "\n",
@@ -192,6 +196,134 @@
     "response = llm.create_joke(word='Lagos Agbero')\n",
     "print(response)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mistral"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.0 -> 24.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install -qU langchain_mistralai"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ChatMistralLLM:\n",
+    "    def __init__(self):\n",
+    "        self.logger = logging.getLogger(__name__)\n",
+    "        self._initialize_mistral()\n",
+    "\n",
+    "        # Load templates during initialization\n",
+    "        self.system_message_template = self._load_template(\"../prompt_templates/system_prompt.txt\")\n",
+    "        self.user_message_template = self._load_template(\"../prompt_templates/user_prompt.txt\")\n",
+    "\n",
+    "    def _initialize_mistral(self):\n",
+    "        try:\n",
+    "            # Initialize Mistral AI LLM\n",
+    "            self.llm = ChatMistralAI(\n",
+    "                model=\"mistral-large-latest\",\n",
+    "                temperature=0,\n",
+    "                max_retries=2,\n",
+    "                mistral_api_key = MISTRAL_API_KEY\n",
+    "                \n",
+    "                \n",
+    "            )\n",
+    "            print(\"Initialized successfully\")\n",
+    "        except Exception as e:\n",
+    "            self.logger.error(f\"Failed to initialize Mistral: {str(e)}\")\n",
+    "            raise HTTPException(status_code=500, detail=\"Failed to initialize Mistral\")\n",
+    "\n",
+    "    def create_joke(self, word: str) -> str:\n",
+    "        try:\n",
+    "            # Update user message template with the word\n",
+    "            user_message_template = self.user_message_template.format(word=word)\n",
+    "            prompt = self._generate_prompt(user_message_template)\n",
+    "            self.logger.info(f\"Generated prompt: {prompt}\")\n",
+    "\n",
+    "            # Generate joke using Mistral\n",
+    "            response = self.llm.invoke(prompt)\n",
+    "\n",
+    "            joke = response.content.strip()\n",
+    "            self.logger.info(f\"Generated joke: {joke}\")\n",
+    "\n",
+    "            return joke\n",
+    "        except HTTPStatusError as e:\n",
+    "            if e.response.status_code == 403:\n",
+    "                self.logger.warning(\"Inactive subscription or usage limit reached.\")\n",
+    "                return \"Unable to generate joke due to subscription issues.\"\n",
+    "            self.logger.error(f\"Error generating joke: {str(e)}\")\n",
+    "            raise HTTPException(status_code=500, detail=\"Failed to generate joke\")\n",
+    "\n",
+    "    def _generate_prompt(self, user_message_template: str) -> str:\n",
+    "        # Combine system and user messages for Mistral\n",
+    "        return f\"{self.system_message_template}\\n{user_message_template}\"\n",
+    "\n",
+    "    def _load_template(self, filepath: str) -> str:\n",
+    "        try:\n",
+    "            with open(filepath, \"r\", encoding=\"utf-8\") as file:\n",
+    "                return file.read().strip()\n",
+    "        except Exception as e:\n",
+    "            self.logger.error(f\"Failed to load template from {filepath}: {str(e)}\")\n",
+    "            raise HTTPException(status_code=500, detail=\"Failed to load prompt template\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialized successfully\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Inactive subscription or usage limit reached.\n"
+     ]
+    }
+   ],
+   "source": [
+    "llm_mistral = ChatMistralLLM()\n",
+    "response = llm_mistral.create_joke(word='Lagos Agbero')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
